# tech-workspace

./: .gitignore  .gitmodules
apps/.archive/: tmux-drata.sh
apps/.archive/utils/: dir.py  env.py  fetch.py
apps/browsing-utils/: get-youtube-subs.sh  play-latest-video-from.sh  url-title.sh
apps/browsing-utils/play-with-mpv/: last-played-play.sh  last-played-subs.sh  last-played-title.sh  last-played-url.sh  list-viewed.sh  urls-history.sh
apps/browsing-utils/tampermonkey/: autoclose-mpv-endpoint.js  chatgpt-to-markdown.js  hihglight-pending-mrs.js  (+3 more)
apps/browsing-utils/youtube/: .gitignore  docker-compose.yml  pyproject.toml  results.json  xentyo-3472_at_pages_plusgoogle_com_subscriptions.csv  xentyo-studio-4264_at_pages_plusgoogle_com_subscriptions.csv
apps/browsing-utils/youtube/src/youtube/: extract.py  server.py
apps/browsing-utils/youtube/src/youtube/templates/: search.html
apps/common-utils/: cache-get.sh  cache-set.sh  last-monday-date.sh  log.sh  notify.sh  os.sh  remove-filenames-windows-characters.sh  run-and-notify.sh
apps/documentary-utils/: calcular-ingresos-cetes.py  health-logger.py  quick-recording-note.py
apps/flow-state/: .env.example  .gitignore  instrumental.txt  natural.txt  possible-searches.txt  series.txt  start.sh  stop.sh  summoning-salt-vibes.txt  waves.txt
apps/git-utils/: git_fileage.py  new-merge-alert.sh  pyproject.toml  share-current-branch.sh
apps/git-utils/src/git_utils/: git_fileage.py
apps/peace-video/: .env.example  play.sh
apps/store-utils/: cloud-archive.sh  encrypt_decrypt.sh  repo-cloud-archive.sh
apps/video-autoedit/: audio-silent-remover.py  folder-structure.yaml  new-project.sh
config/: .gitignore  example.env  setup.sh  update.sh
config/.archived/: .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml
config/.dotfiles/: .bashrc  .gitconfig  .stow-local-ignore  .zshrc
config/.ssh/: config
config/git/: .gitconfig  .stow-local-ignore
config/work/: .stow-local-ignore
config/zsh/: .bashrc  .zshrc
init/: init.dotfiles.sh  init.sh  install.0.brew.mac.sh  install.0.rust.mac.sh  install.0.rust.sh  install.0.snap.debian.sh  install.0.xcode.mac.sh  install.deno.sh  install.fzf.debian.sh  install.fzf.mac.sh  install.fzf.sh  install.fzf.wsl-debian.sh  install.go.sh  install.gvm.sh  install.jabba.sh  install.neovim.mac.sh  install.neovim.sh  install.neovim.wsl-debian.sh  install.nodejs.mac.sh  install.nodejs.sh  install.python-dependencies.debian.sh  install.python-dependencies.mac.sh  install.python-dependencies.sh  install.python-dependencies.wsl-ubuntu.sh  install.python-pdm.sh  install.python-pipx.mac.sh  install.python.mac.sh  install.python.sh  install.sh  install.stow.mac.sh  install.zsh.mac.sh  install.zsh.ubuntu.sh  main.sh
init/commons/: get-os-name.sh  install.command.sh
scheduler/: load-anacron-config.sh  load-crontab-config.sh
scheduler/cronjobs/: snts.cron
(+281 files in other folders)
