[project]
name = "youtube"
version = "0.1.0"
description = "set of youtube browsing scripts"
authors = [
    {name = "Christian Camacho", email = "chris.ca.dev@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
