[project]
name = "youtube"
version = "0.1.0"
description = "set of youtube browsing scripts"
authors = [
    {name = "Christian Camacho", email = "chris.ca.dev@gmail.com"},
]
dependencies = [
    "click>=8.1.7",
    "google-api-python-client>=2.147.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
extract-subscriptions = "youtube.extract_subscriptions:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
